--- a/src/html/exercices/exercice1.html
+++ b/src/html/exercices/exercice1.html
@@ -1,7 +1,33 @@
-Exercice 1
+<div>
+    <h1>Exercice 1</h1>
+    
 
-Consignes :
-- Mettre en forme l'exercice 1
-- En-dessous, regrouper les noms de balises vues jusqu'ici dans un tableau avec en-têtes ayant pour colonnes : Balise,
-Contenu. Dans la colonne contenu spécifier la ou les balises qu'il est possible d'insérer à l'intérieur, ou "texte"
-(pour les titres par exemple).
+    <h3>Consignes :</h3>
+    <ul>
+        <li>Mettre en forme l'exercice 1</li>
+        <li>En-dessous, regrouper les noms de balises vues jusqu'ici dans un tableau avec en-têtes ayant pour colonnes : Balise,
+            Contenu. Dans la colonne contenu spécifier la ou les balises qu'il est possible d'insérer à l'intérieur, ou "texte"
+            (pour les titres par exemple).</li>
+    </ul>
+    <table class="table">
+        <tr>
+            <th>Balise</th>
+            <th>Contenu</th>
+          </tr>
+          <tr>
+            <td>Headers</td>
+            <td>h1, h2, h3, h4</td>
+          </tr>
+          <tr>
+            <td>Listes</td>
+            <td>5</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>13</td>
+            <td>21</td>
+            <td>34</td>
+          </tr>
+    </table>
+
+</div>
