--- a/src/html/exercices/exercice2.html
+++ b/src/html/exercices/exercice2.html
@@ -1,6 +1,37 @@
-Exercice 2
+<h1>Exercice 2</h1>
+<h3>consignes :</h3>
+<ul>
+    <li>Mettre en forme l'exercice 2</li>
+    <li>Créer ci-dessous un formulaire d'inscription contenant les champs : Prénom, nom, email, mot de passe, checkbox pour
+        accepter un quelconque règlement et un bouton de validation.</li>
+</ul>
+<form method="post">
+    <div>
+      <label for="lastname">Nom</label>
+      <input type="text" id="lastname" name="lastname" placeholder="Nom" />
+    </div>
+    <div>
+        <label for="firstname">Prénom</label>
+        <input type="text" id="firstname" name="firstname" placeholder="Prénom" />
+    </div>
+    <div class="email-container">
+        <label for="mail">Mail</label>
+        <input type="email" id="mail" name="email" placeholder="mail" />
+        <div class="email-tooltip"></div>
+    </div>
+    <div>
+        <label for="password">Mot de Passe</label>
+        <input type="password" id="password" name="password" placeholder="password" />
+    </div>
+    <div>
+        <label for="cgu">CGU</label>
+        <input type="checkbox" id="cgu" name="cgu" />
+      </div>
+    
+      <div>
+        <button type="submit">Envoyer</button>
+      </div>
 
-Consignes :
-- Mettre en forme l'exercice 2
-- Créer ci-dessous un formulaire d'inscription contenant les champs : Prénom, nom, email, mot de passe, checkbox pour
-accepter un quelconque règlement et un bouton de validation.
+    
+
+</form>
